...
    <string name="app_name">Kalkulator Kalorii i BMI</string>
    <string name="splash_image_desc">Grafika wprowadzająca</string>

    <string-array name="activity_levels">
        <item>Brak ruchu</item>
        <item>1 raz w tygodniu</item>
        <item>2 do 3 razy w tygodniu</item>
        <item>4 do 5 razy w tygodniu</item>
        <item>Codziennie</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
...
